# uap-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  flake.nix  rustfmt.toml
benches/: benchmark.rs
examples/: full_parser.rs  no_unicode_parser.rs  os_only_no_unicode_parser.rs
nix/: shell.nix
src/: client.rs  device.rs  file.rs  lib.rs  os.rs  user_agent.rs
src/parser/: builder.rs  device.rs  mod.rs  os.rs  user_agent.rs
