[package]
name          = "uaparser"
version       = "0.4.0"
description   = "A Rust implementation of the UA Parser"
license       = "MIT"
authors       = ["David Lewis <david@armstronglewis.com>"]
edition       = "2018"

homepage      = "https://github.com/davidarmstronglewis/uap-rs"
repository    = "https://github.com/davidarmstronglewis/uap-rs"
documentation = "https://docs.rs/uap-rs/"
readme        = "README.md"

keywords      = ["user", "agent", "parser", "uap", "uaparser"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
serde = "1.0.110"
serde_yaml = "0.8.12"
serde_derive = "1.0.110"
derive_more = "0.99.7"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false
