[package]
name          = "uaparser"
version       = "0.6.2"
description   = "A Rust implementation of the UA Parser"
license       = "MIT"
authors       = ["David Lewis"]
edition       = "2018"

homepage      = "https://github.com/davidarmstronglewis/uap-rs"
repository    = "https://github.com/davidarmstronglewis/uap-rs"
documentation = "https://docs.rs/uap-rs/"
readme        = "README.md"

keywords      = ["user", "agent", "parser", "uap", "uaparser"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.9.1"
serde = "1.0.137"
serde_yaml = "0.8.24"
serde_derive = "1.0.137"
derive_more = "0.99.17"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false
