[package]
name          = "uaparser"
version       = "0.6.3"
description   = "A Rust implementation of the UA Parser"
license       = "MIT"
authors       = ["Ocean Lewis"]
edition       = "2018"

homepage      = "https://github.com/davidarmstronglewis/uap-rs"
repository    = "https://github.com/davidarmstronglewis/uap-rs"
documentation = "https://docs.rs/uap-rs/"
readme        = "README.md"

keywords      = ["user", "agent", "parser", "uap", "uaparser"]

[dependencies]
lazy_static = "1.4"
regex = "1.10"
serde = "1.0"
serde_yaml = "0.9"
serde_derive = "1.0"
derive_more = "0.99"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
